--- a/api/public/style.css
+++ b/api/public/style.css
@@ -229,6 +229,7 @@ button:disabled {
 .order-pizza {
   width: 100%;
   margin-left: 25px;
+  min-height: 334px;
 }
 
 .pizza {
@@ -240,7 +241,7 @@ button:disabled {
 
 .pizza-of-the-day {
   border-top: 1px solid var(--border);
-  margin-top: 50px;
+  /* margin-top: 50px; */
   width: 100%;
 }
 
